added audio and video to index

--- a/index.html
+++ b/index.html
@@ -156,8 +156,27 @@
 			<h2> Images </h2>
 			<h3> JPG </h3>
 			<img src="images/cat-photo.jpg" alt="A cat sitting at a desk">
+
 			<h3> PNG </h3>
 			<img src="images/cat-drawing.png" alt="A drawing of a cat">
+		</section>
+
+		<section>
+			<h2> Audio and Video</h2>
+			<!-- option 1 -->
+			<audio src="media/dialup-internet.mp3" controls></audio>
+			<!-- option 2 -->
+			 <audio controls>
+				<source src="media/dialup-internet.mp3">
+				your browser doesn't support the audio
+			 </audio>
+
+			 <!-- option 1 -->
+			 <video controls poster="images/storm.jpg" width="720">
+				<source src="media/storm.webm" type="'video/webm">
+				<source src="media/storm.mp4" type="video/mp4">
+				Your browser doesn't support the video
+			 </video>
 		</section>
 	</main>
 
