--- a/pricing.html
+++ b/pricing.html
@@ -9,12 +9,18 @@
 
 	<header>
 		<p>FWDP 1000 - Web Development 1</p>
-
-		<!-- Add navigation to the three other pages here -->
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about-us.html">About</a></li>
+				<li><a href="news.html">News</a></li>
+			</ul>
+		</nav>
 	</header>
 
 	<main>
-
+	
+	<section>
 		<h1>Our Prices</h1>
 
 		<h2>Find the Plan for You</h2>
@@ -54,13 +60,18 @@
 				<td>20</td>
 			</tr>
 		</table>
+	</section>
 
+	<section>
 		<h2>Our Support Team</h2>
 
 		<p>Our helpful support team is available 24/7. Our Premium Customers recieve priority when it comes to support but all of our customers receive top notch support from our team. We are fast, efficient and highly rated!</p>
 		
 		<!-- Add an image here -->
+		 <img src="images/cat-photo.jpg" alt="A cat sitting at a desk">
+	</section>
 
+	<section>
 		<h2>What Our Customers Say</h2>
 
 		<blockquote>
@@ -76,7 +87,13 @@
 		</blockquote>
 
 		<!-- Add a video here -->
+		<video width="320" height="240" controls>
+			<source src="media/storm.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		  </video>
+	</section>
 
+	<section>
 		<h2>Frequently Asked Questions</h2>
 		
 		<!-- Add markup below to show/hide the answers to the questions -->
@@ -89,7 +106,7 @@
 		
 		Can I return the product?
 		Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris congue, risus congue porttitor dignissim, arcu purus imperdiet massa, sit amet convallis lorem leo sit amet lorem. Cras volutpat lobortis orci, quis efficitur augue fermentum nec. Vivamus non cursus magna.
-
+	</section>
 	</main>
 
 	<footer>
