--- a/pricing.html
+++ b/pricing.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>Pricing</title>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -19,94 +21,122 @@
 	</header>
 
 	<main>
-	
-	<section>
-		<h1>Our Prices</h1>
 
-		<h2>Find the Plan for You</h2>
+		<section>
+			<h1>Our Prices</h1>
 
-		<p>We offer three plans to meet your specific needs, assuming your specific needs fall perfectly in line with one of our three plans.</p>
+			<h2>Find the Plan for You</h2>
 
-		<table>
-			<caption>Pricing Comparison</caption>
-			<tr>
-				<th></th>
-				<th>Basic</th>
-				<th>Standard</th>
-				<th>Premium</th>
-			</tr>
-			<tr>
-				<th>Price</th>
-				<td>$19 / month</td>
-				<td>$49 / month</td>
-				<td>$99 / month</td>
-			</tr>
-			<tr>
-				<th>Number of Lorems</th>
-				<td>100 Lorems</td>
-				<td>500 Lorems</td>
-				<td>2000 Lorems</td>
-			</tr>
-			<tr>
-				<th>Level of Acccess</th>
-				<td>Limited Access</td>
-				<td>Unlimited Access</td>
-				<td>Preferred Access</td>
-			</tr>
-			<tr>
-				<th>Accounts</th>
-				<td>1</td>
-				<td>5</td>
-				<td>20</td>
-			</tr>
-		</table>
-	</section>
+			<p>We offer three plans to meet your specific needs, assuming your specific needs fall perfectly in line
+				with one of our three plans.</p>
 
-	<section>
-		<h2>Our Support Team</h2>
+			<table>
+				<caption>Pricing Comparison</caption>
+				<tr>
+					<th></th>
+					<th>Basic</th>
+					<th>Standard</th>
+					<th>Premium</th>
+				</tr>
+				<tr>
+					<th>Price</th>
+					<td>$19 / month</td>
+					<td>$49 / month</td>
+					<td>$99 / month</td>
+				</tr>
+				<tr>
+					<th>Number of Lorems</th>
+					<td>100 Lorems</td>
+					<td>500 Lorems</td>
+					<td>2000 Lorems</td>
+				</tr>
+				<tr>
+					<th>Level of Acccess</th>
+					<td>Limited Access</td>
+					<td>Unlimited Access</td>
+					<td>Preferred Access</td>
+				</tr>
+				<tr>
+					<th>Accounts</th>
+					<td>1</td>
+					<td>5</td>
+					<td>20</td>
+				</tr>
+			</table>
+		</section>
 
-		<p>Our helpful support team is available 24/7. Our Premium Customers recieve priority when it comes to support but all of our customers receive top notch support from our team. We are fast, efficient and highly rated!</p>
-		
-		<!-- Add an image here -->
-		 <img src="images/cat-photo.jpg" alt="A cat sitting at a desk">
-	</section>
+		<section class="s2-bg-swap">
+			<h2>Our Support Team</h2>
 
-	<section>
-		<h2>What Our Customers Say</h2>
+			<p>Our helpful support team is available 24/7. Our Premium Customers recieve priority when it comes to
+				support but all of our customers receive top notch support from our team. We are fast, efficient and
+				highly rated!</p>
 
-		<blockquote>
-			<p>Morbi tincidunt metus eget nibh feugiat rutrum. Etiam elit urna, euismod eget mauris nec, condimentum finibus arcu. Praesent fermentum libero vel nibh accumsan congue. Cras fermentum, enim et facilisis molestie, urna turpis ultrices risus, in lacinia enim augue non sem.</p>
-		</blockquote>
+			<!-- Add an image here -->
+			<img src="images/cat-photo.jpg" alt="A cat sitting at a desk">
+		</section>
 
-		<blockquote>
-			<p>In maximus interdum dapibus. Mauris eget auctor ligula. Etiam ultrices quam a turpis dictum, eget dignissim leo placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi quis ligula at lacus commodo pulvinar eget vel enim.</p>
-		</blockquote>
+		<section>
+			<h2>What Our Customers Say</h2>
 
-		<blockquote>
-			<p>Fusce imperdiet tortor fermentum urna semper maximus. Fusce tempus nisi ac turpis mattis, in convallis lectus laoreet. Sed eget elit id mauris pretium ornare ut a nulla. Proin tempus iaculis dolor, non aliquet dolor malesuada ut. Vestibulum condimentum aliquam libero ac scelerisque.</p>
-		</blockquote>
+			<blockquote>
+				<p>Morbi tincidunt metus eget nibh feugiat rutrum. Etiam elit urna, euismod eget mauris nec, condimentum
+					finibus arcu. Praesent fermentum libero vel nibh accumsan congue. Cras fermentum, enim et facilisis
+					molestie, urna turpis ultrices risus, in lacinia enim augue non sem.</p>
+			</blockquote>
 
-		<!-- Add a video here -->
-		<video width="320" height="240" controls>
-			<source src="media/storm.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		  </video>
-	</section>
+			<blockquote>
+				<p>In maximus interdum dapibus. Mauris eget auctor ligula. Etiam ultrices quam a turpis dictum, eget
+					dignissim leo placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+					cubilia curae; Morbi quis ligula at lacus commodo pulvinar eget vel enim.</p>
+			</blockquote>
 
-	<section>
-		<h2>Frequently Asked Questions</h2>
-		
-		<!-- Add markup below to show/hide the answers to the questions -->
-		
-		When will my order be ready?
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, est in elementum molestie, ex enim eleifend lectus, in porta ex odio vitae libero. Maecenas sit amet elit ut quam suscipit pulvinar. Pellentesque congue imperdiet augue ut laoreet. Mauris imperdiet lacinia erat at luctus.
+			<blockquote>
+				<p>Fusce imperdiet tortor fermentum urna semper maximus. Fusce tempus nisi ac turpis mattis, in
+					convallis lectus laoreet. Sed eget elit id mauris pretium ornare ut a nulla. Proin tempus iaculis
+					dolor, non aliquet dolor malesuada ut. Vestibulum condimentum aliquam libero ac scelerisque.</p>
+			</blockquote>
 
-		What are your store hours?
-		Vestibulum vel sapien sed est aliquam aliquam nec a felis. Nulla tempor ultrices mi ac congue. Morbi sed eros dignissim, sagittis sapien ac, finibus turpis. Curabitur condimentum, urna sit amet mattis faucibus, sem leo viverra orci, ac scelerisque nibh justo at magna.
-		
-		Can I return the product?
-		Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris congue, risus congue porttitor dignissim, arcu purus imperdiet massa, sit amet convallis lorem leo sit amet lorem. Cras volutpat lobortis orci, quis efficitur augue fermentum nec. Vivamus non cursus magna.
-	</section>
+			<!-- Add a video here -->
+			<video width="320" height="240" controls>
+				<source src="media/storm.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+		</section>
+
+		<section>
+			<h2>Frequently Asked Questions</h2>
+
+			<!-- Add markup below to show/hide the answers to the questions -->
+			<details>
+				<summary>
+					When will my order be ready?
+				</summary>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, est in elementum molestie,
+				ex enim eleifend lectus, in porta ex odio vitae libero. Maecenas sit amet elit ut quam suscipit
+				pulvinar. Pellentesque congue imperdiet augue ut laoreet. Mauris imperdiet lacinia erat at luctus.
+			</details>
+
+			<details>
+				<summary>
+					What are your store hours?
+				</summary>
+
+				Vestibulum vel sapien sed est aliquam aliquam nec a felis. Nulla tempor ultrices mi ac congue. Morbi sed
+				eros dignissim, sagittis sapien ac, finibus turpis. Curabitur condimentum, urna sit amet mattis
+				faucibus,
+				sem leo viverra orci, ac scelerisque nibh justo at magna.
+			</details>
+
+			<details>
+				<summary>
+					Can I return the product?
+				</summary>
+				Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris congue, risus
+				congue porttitor dignissim, arcu purus imperdiet massa, sit amet convallis lorem leo sit amet lorem. Cras
+				volutpat lobortis orci, quis efficitur augue fermentum nec. Vivamus non cursus magna.
+			</details>
+		</section>
 	</main>
 
 	<footer>
@@ -114,4 +144,5 @@
 	</footer>
 
 </body>
+
 </html>
